# MUA-Keyboard

./: .claudeignore  .editorconfig  .gitignore  .project  AndroidManifest.xml  CLAUDE.md  PLAY_STORE_CHANGELOG.md  PRODUCT_BACKLOG.md  README.md  RELEASE_NOTES_v3.0.md  RELEASE_NOTES_v3.1.md  RELEASE_NOTES_v3.2.md  build.gradle  gradle.properties  privacy-policy.html  project.properties  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  lstm_engine.cpp  lstm_engine.h  lstm_jni.cpp  ngram_engine.cpp  ngram_engine.h  ngram_jni.cpp  trie.cpp  trie.hpp  trie_c_api.cpp  trie_c_api.h  trie_jni.cpp
docs/: suggestion-architecture.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
res/drawable/: Thumbs.db
res/drawable-mdpi/: blue_gray_special_key_bg.xml  gold_normal.xml  gold_special_key_bg.xml  material_special_key_bg.xml  normal.xml  pressed.xml  pressed2.xml  previewbackground.xml  samplekeybackground.xml  samplekeybackground2.xml  special_key_bg.xml
res/drawable-xxhdpi/: shn_qwerty.xml
res/layout/: blue_gray_keyboard.xml  default_keyboard.xml  flat_green_keyboard.xml  material_preview.xml
res/values/: array.xml  dimens.xml  fractions.xml  strings.xml  styles.xml
res/xml/: emotion.xml  en_qwerty.xml  en_shift_symbol.xml  en_symbol.xml  ep_karen_qwerty.xml  ep_karen_shifted_qwerty.xml  ep_karen_symbol.xml  ime_preferences.xml  method.xml  mon_qwerty.xml  mon_shifted_qwerty.xml  mon_symbol.xml  my_2_qwerty.xml  (+14 more)
scripts/: convert_ngrams.py  export_keras_to_native.py  train_native_lstm.py
(+175 files in other folders)
